public/scss/_nature_variables.scss
$family-primary: 'Roboto', sans-serif !default;
$family-heading: 'Roboto Slab', sans-serif !default;

$font-size: 1.2rem !default;
$font-weight: 300 !default;
$strong-weight: 500 !default;

$container-padding: 0 20px !default;

/* Navigation */
$navbar-background-color: #eaeaea !default;
$navbar-background-color-home: rgba(#eaeaea, .7) !default;

$navbar-item-color: #333 !default;
$navbar-item-hover-color: $navbar-item-color !default;
$navbar-item-hover-background-color: none !default;
$navbar-item-active-color: $navbar-item-color !default;
$navbar-item-active-background-color: none !default;
$navbar-item-img-max-height: none !default;

$navbar-dropdown-background-color: linear-gradient(to top, white calc(100% - 20px), rgba(255, 255, 255, 0) 100%) !default;
$navbar-dropdown-lvl3-background-color: #fff !default;
$navbar-dropdown-lvl4-background-color: $navbar-dropdown-lvl3-background-color !default;
$navbar-dropdown-arrow: $primary !default;
$navbar-dropdown-border-top: none !default;
$navbar-dropdown-boxed-shadow: none !default;

$navbar-dropdown-item-hover-color: $link-hover !default;
$navbar-dropdown-item-hover-background-color: none !default;
$navbar-dropdown-item-active-color: $link-hover !default;
$navbar-dropdown-item-active-background-color: none !default;

$navbar-burger-color: $primary !default;

$navbar-breakpoint: $desktop !default;

/* Menu */
$menu-item-color: $text !default;
$menu-item-radius: 5px !default;
$menu-item-hover-color: $text !default;
$menu-item-hover-background-color: $boxes-background !default;
$menu-item-active-color: #fff !default;
$menu-item-active-background-color: $link !default;
$menu-list-border-left: 1px solid rgba($text, 0.2) !default;

/* Footer */
$footer-background-color: $black-ter !default;
$footer-color: $white-ter !default;
$footer-padding: 40px 0 !default;

$footer-copyright-background-color: $black-bis !default;
$footer-copyright-color: #4a4a4a !default;
$footer-copyright-padding: $footer-padding !default;

/* Tabs */
$tabs-border-bottom-color: rgba($text, 0.2) !default;
$tabs-border-bottom-style: solid !default;
$tabs-border-bottom-width: 1px !default;

$tabs-link-color: $text !default;
$tabs-link-hover-color: $link-hover !default;
$tabs-link-active-color: $text !default;
$tabs-link-padding: 0.5em 1em !default;
$tabs-link-active-border-bottom-color: $primary !default;
$tabs-link-hover-border-bottom-color: $primary !default;

/* Forms */
$input-color: $boxes-color !default;
$input-background-color: $boxes-background !default;
$input-border-color: $grey-lighter !default;
$input-shadow: none !default;
$input-hover-color: $primary !default;
$input-hover-border-color: $grey-lighter !default;
$input-focus-border-color: $grey-lighter !default;
$input-focus-box-shadow-size: 0 !default;
$input-arrow: $link !default;
$input-icon-color: rgba($boxes-color,.4) !default;
$input-icon-active-color: $boxes-color !default;
$input-radius: 4px !default;

/* Pagination */
$pagination-color: $text !default;
$pagination-border-color: $grey-lighter !default;
$pagination-hover-color: $link-hover !default;
$pagination-hover-border-color: $link-hover !default;
$pagination-current-color: $white !default;
$pagination-current-background-color: $link-hover !default;
$pagination-current-border-color: $link-hover !default;

/* Breadcrumb */
$breadcrumb-background-color: $boxes-background !default;
$breadcrumb-item-color: $link !default;
$breadcrumb-item-hover-color: $link-hover !default;
$breadcrumb-item-active-color: $boxes-color !default;
$breadcrumb-item-separator-color: $boxes-color !default;

/* Modal */
$modal-background-background-color: rgba($black, 0.86) !default;
$modal-content-width: 640px !default;
$modal-card-head-background-color: $background !default;
$modal-card-head-border-bottom: 1px solid rgba($text, 0.2) !default;
$modal-card-head-padding: 20px !default;
$modal-card-body-background-color: $boxes-background !default;
$modal-card-body-padding: 20px !default;

/* Table */
$table-background-color: $background !default;
$table-color: $text !default;
$table-head-cell-color: $text !default;
$table-row-hover-background-color: $boxes-background !default;
$table-striped-row-even-background-color: $boxes-background !default;
$table-striped-row-even-hover-background-color: $boxes-background !default;

/* Buttons */
$button-color: $grey-darker !default;
$button-background-color: $white !default;
$button-border-color: $grey-lighter !default;
$button-border-width: 1px !default;
$button-hover-color: $link-hover !default;
$button-hover-border-color: $link-hover !default;

/* Megamenu */
$megamenu-width: 100% !default;
$megamenu-right: 0px !default;
$megamenu-background-color: $boxes-background !default;
$megamenu-background-color-home: $megamenu-background-color !default;
$megamenu-item-width: 20% !default;
$megamenu-padding: 20px 60px 5px 30px !default;
$megamenu-link-lvl2-color: #000 !default;
$megamenu-link-lvl2-color-hover: $primary !default;
$megamenu-link-lvl3-color: #4a4a4a !default;
$megamenu-link-lvl3-color-hover: $link-hover !default;
$megamenu-border-color: $primary !default;

/* Slider */
$nature-slider-min-height: 100vh !default;
$nature-slider-mobile-min-height: 100vh !default;

/* Zitat */
$quote-background: $primary !default;
$quote-color: #fff !default;
$quote-icons-color: $link-hover !default;

